2A/05_Projet_GL/src/test/deca/context/valid/complet/82_method_call_plus_param.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {

    float add(float a , int b ,   float  c) {
        return a + b + c ;
    }
}


{
    A a ;
    a.add(1, 3 , 2);
}