2A/05_Projet_GL/src/test/deca/context/invalid/complet/63_method_clall_sig_diff_arg2.deca
// Description :
//   Appelle de methode avce de type non compatible partie droite 
// Resultats :
//    ligne 18 :  le boolean ne peut pas être affecté à int
// Historique : 
//  cree le 16/01/2024

class A {
    int add(int a , int b) {
        return a + b ; 
    }
}


{
    A a = new A();

    int res = a.add(1 , true);
}